hphp/test/slow/reified_generics/reified-param-primitive-2.php.expectf
Warning: Argument 1 passed to f() must be an instance of shape('a' => C<int>, 'b' => string), given array in %s on line 17
Error: Argument 1 passed to f() must be an instance of shape('a' => C<int>, 'b' => int), given array on line 22

Warning: Argument 1 passed to f() must be an instance of (C<int>, string), given array in %s on line 17
Error: Argument 1 passed to f() must be an instance of (C<int>, int), given array on line 27
